# zat

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
bat/: __init__.py  bro_log_reader.py  bro_multi_log_reader.py  dataframe_stats.py  dataframe_to_matrix.py  dataframe_to_parquet.py  live_simulator.py  log_to_dataframe.py  log_to_parquet.py  log_to_sparkdf.py
brothon/: __init__.py  bro_log_reader.py  bro_log_reader.py.bak  bro_multi_log_reader.py  live_simulator.py
ci_cd/: Dockerfile  requirements.txt
data/: intel_example.intel  top_domains_1k.csv
docs/: admin_notes.md  authors.md  authors.rst  conf.py  conf.py.bak  contributing.md  contributing.rst  dataframe_to_matrix.md  examples.md  examples.rst  history.rst  index.md  index.rst  installation.rst  large_dataframes.md  pypi_release.md  raspberry_pi.md  usage.rst  zeek_kafka_mac.md
examples/: README.md  anomaly_detection.py  anomaly_detection_streaming.py  bro_log_pandas.py  bro_log_pandas.py.bak  bro_log_pprint.py  bro_log_vtquery.py  bro_pprint.py  bro_to_pandas.py  bro_to_parquet.py  bro_to_scikit.py  cert_checker.py  cert_checker.py.bak  file_log_vtquery.py  file_log_vtquery.py.bak  http_user_agents.py  http_user_agents.py.bak  kafka_print.py  kafka_risky_dns.py  kafka_spark.py  outlier_detection.py  pandas_whitelist.py  risky_dns.py  risky_dns.py.bak  risky_dns_kafka.py  simple_dns_outlier.py  streaming_outlier_detection.py  tail_file.py  tor_and_port_count.py  (+8 more)
(+97 files in other folders)
