[wheel]
universal = 1

[aliases]
release = sdist bdist_wheel upload -r pypi
test_release = sdist bdist_wheel upload -r pypitest

[metadata]
description-file = README.md

[flake8]
max-line-length = 140

[tool:pytest]
addopts= -v --cov-report term-missing
python_files=*.py
python_functions=test
norecursedirs=.tox .git *.egg-info __pycache__ dist build
